[project]
name = "wolfram-mcp"
version = "0.1.0"
description = "A FastMCP server that provides Wolfram Language evaluation capabilities through the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Shang En Sim", email = "sim@shangen.org"},
]
keywords = ["wolfram", "mathematica", "mcp", "model-context-protocol", "fastmcp", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.9.2",
    "wolframclient>=1.4.0",
]
